--- a/paper/poverty.bib
+++ b/paper/poverty.bib
@@ -658,7 +658,7 @@
   shorttitle = {Universal {{Basic Income Proposals}} in {{Light}} of {{ILO Standards}}},
   author = {Ortiz, Isabel and Behrendt, Christina and {Acu{\~n}a-Ulate}, Andres and Anh, Nguyen Quynh},
   year = {2018},
-  journal = {SSRN Electronic Journal},
+  journal = {ILO Working Paper},
   issn = {1556-5068},
   doi = {10.2139/ssrn.3208737},
   url = {https://www.ssrn.com/abstract=3208737}
@@ -718,7 +718,6 @@
   number = {2},
   issn = {1948-1837},
   doi = {10.2202/1948-1837.1105},
-  url = {https://www.degruyter.com/dg/viewarticle/j\$002fjgd.2010.1.2\$002fjgd.2010.1.2.1105\$002fjgd.2010.1.2.1105.xml},
   annotation = {00126}
 }
 
