--- a/paper/poverty.bib
+++ b/paper/poverty.bib
@@ -433,6 +433,14 @@
   url = {https://ideas.repec.org//a/spr/revint/v12y2017i1d10.1007\_s11558-015-9239-3.html}
 }
 
+@techreport{kharas_building_2019,
+  title = {Building the {{SDG}} Economy},
+  author = {Kharas, Homi and McArthur, John},
+  year = {2019},
+  institution = {{Brookings}},
+  url = {https://cdn.givingcompass.org/wp-content/uploads/2019/10/23094009/Building-the-SDG-economy.pdf}
+}
+
 @article{kikstra_decent_2021,
   title = {Decent Living Gaps and Energy Needs around the World},
   author = {Kikstra, Jarmo S. and Mastrucci, Alessio and Min, Jihoon and Riahi, Keywan and Rao, Narasimha D.},
@@ -747,6 +755,19 @@
   url = {https://papers.ssrn.com/abstract=3537705}
 }
 
+@book{rozenberg_beyond_2019,
+  title = {Beyond the {{Gap}}: {{How Countries Can Afford}} the {{Infrastructure They Need}} While {{Protecting}} the {{Planet}}},
+  shorttitle = {Beyond the {{Gap}}},
+  author = {Rozenberg, Julie and Fay, Marianne},
+  year = {2019},
+  month = feb,
+  series = {Sustainable {{Infrastructure Series}}},
+  publisher = {{The World Bank}},
+  doi = {10.1596/978-1-4648-1363-4},
+  url = {https://elibrary.worldbank.org/doi/abs/10.1596/978-1-4648-1363-4},
+  isbn = {978-1-4648-1363-4}
+}
+
 @article{saez_progressive_2019,
   title = {Progressive {{Wealth Taxation}}},
   author = {Saez, Emmanuel and Zucman, Gabriel},
@@ -759,6 +780,17 @@
   issn = {1533-4465},
   doi = {10.1353/eca.2019.0017},
   url = {https://muse.jhu.edu/pub/11/article/764710}
+}
+
+@techreport{schmidt-traub_investment_2015,
+  title = {Investment {{Needs}} to {{Achieve}} the {{Sustainable Development Goals}}: {{Understanding}} the {{Billions}} and {{Trillions}}},
+  shorttitle = {Investment {{Needs}} to {{Achieve}} the {{Sustainable Development Goals}}},
+  author = {{Schmidt-Traub}, Guido},
+  year = {2015},
+  eprint = {resrep15864},
+  eprinttype = {jstor},
+  institution = {{Sustainable Development Solutions Network}},
+  url = {https://www.jstor.org/stable/resrep15864}
 }
 
 @article{sdsn_sdg_2019,
