--- a/paper/poverty.bib
+++ b/paper/poverty.bib
@@ -654,6 +654,13 @@
   copyright = {{\copyright} 2018 International Association for Research in Income and Wealth}
 }
 
+@techreport{oecd_bottlenecks_2023,
+  title = {Bottlenecks to {{Access SDG Finance}} for {{Developing Countries}}},
+  author = {OECD},
+  year = {2023},
+  url = {https://www.oecd.org/g20/oecd-g20-bottlenecks-sdg-finance-developing-countries.pdf}
+}
+
 @techreport{oecd_oda_2023,
   title = {{{ODA Levels}} in 2022},
   author = {OECD, .},
@@ -715,6 +722,20 @@
   doi = {10.1111/roiw.12577},
   url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/roiw.12577},
   copyright = {{\copyright} 2022 International Association for Research in Income and Wealth}
+}
+
+@article{ravallion_how_2013,
+  title = {How {{Long Will It Take}} to {{Lift One Billion People Out}} of {{Poverty}}?},
+  author = {Ravallion, M.},
+  year = {2013},
+  month = aug,
+  journal = {The World Bank Research Observer},
+  volume = {28},
+  number = {2},
+  pages = {139--158},
+  issn = {0257-3032, 1564-6971},
+  doi = {10.1093/wbro/lkt003},
+  url = {https://academic.oup.com/wbro/article-lookup/doi/10.1093/wbro/lkt003}
 }
 
 @article{ravallion_poorer_2010,
