--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -324,7 +324,7 @@ To give a last example of the shortfall of resources in the lowest-income countr
 }\label{fig:antipoverty_cap}
 \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
 {../figures/y_expropriated_2_average.pdf}}
-\end{figure} % TODO! change thresholds
+\end{figure} 
 
 In most of the paper, I focus on the definition of extreme poverty employed in the first SDG. However, the \$2.15 threshold has been criticized for inaccurately measuring poverty.\cite{woodward_redefining_2010,deaton_price_2010} % TODO? cite also edward_ethical_2006, pritchett_who_2006
 First, this poverty line %is too low to procure just a healthy diet, it is 
