--- a/paper/._wordcount_selection.tex
+++ b/paper/._wordcount_selection.tex
@@ -1,1 +1,8 @@
-% TODO! change thresholds
+
+
+\begin{figure}[b!]
+  \caption{Income cap eradicating extreme poverty (in \$/day). In this idealized policy, all income above the cap is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, and after a yearly growth of 3\% over 2022--2030. %abstracting away from distorsions and implementation costs. Growth is 3\% over 2022--2030.
+  }\label{fig:antipoverty_cap}
+  \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
+  {../figures/y_expropriated_2_average.pdf}}
+  \end{figure} 
