--- a/paper/poverty.bib
+++ b/paper/poverty.bib
@@ -130,6 +130,21 @@
   url = {https://www.aeaweb.org/articles?id=10.1257/00028280260344443}
 }
 
+@article{ceriani_income_2014,
+  title = {The {{Income Lever}} and the {{Allocation}} of {{Aid}}},
+  author = {Ceriani, Lidia and Verme, Paolo},
+  year = {2014},
+  month = nov,
+  journal = {The Journal of Development Studies},
+  volume = {50},
+  number = {11},
+  pages = {1510--1522},
+  publisher = {{Routledge}},
+  issn = {0022-0388},
+  doi = {10.1080/00220388.2014.951037},
+  url = {https://doi.org/10.1080/00220388.2014.951037}
+}
+
 @article{chancel_global_2021,
   title = {Global {{Income Inequality}}, 1820{\textendash}2020: The {{Persistence}} and {{Mutation}} of {{Extreme Inequality}}},
   shorttitle = {Global {{Income Inequality}}, 1820{\textendash}2020},
@@ -485,6 +500,21 @@
   url = {http://hdl.handle.net/10986/16935}
 }
 
+@article{lakner_global_2016,
+  title = {Global {{Income Distribution}}: {{From}} the {{Fall}} of the {{Berlin Wall}} to the {{Great Recession}}},
+  shorttitle = {Global {{Income Distribution}}},
+  author = {Lakner, Christoph and Milanovic, Branko},
+  year = {2016},
+  month = jan,
+  journal = {The World Bank Economic Review},
+  volume = {30},
+  number = {2},
+  pages = {203--232},
+  issn = {0258-6770},
+  doi = {10.1093/wber/lhv039},
+  url = {https://doi.org/10.1093/wber/lhv039}
+}
+
 @techreport{lakner_how_2019,
   type = {Working {{Paper}}},
   title = {How {{Much Does Reducing Inequality Matter}} for {{Global Poverty}}?},
@@ -541,6 +571,16 @@
   institution = {{ODI}},
   url = {https://www.econstor.eu/handle/10419/190851},
   copyright = {http://www.econstor.eu/dspace/Nutzungsbedingungen}
+}
+
+@techreport{manuel_financing_2020,
+  title = {Financing the Reduction of Extreme Poverty Post-{{Covid-19}}},
+  author = {Manuel, Marcus and Carson, Liam and Samman, Emma and Evans, Martin},
+  year = {2020},
+  eprint = {resrep51348},
+  eprinttype = {jstor},
+  institution = {{ODI}},
+  url = {https://www.jstor.org/stable/resrep51348}
 }
 
 @article{martinez_how_2022,
@@ -890,10 +930,34 @@
   isbn = {978-1-315-23108-2}
 }
 
+@article{woodward_incrementum_2015,
+  title = {Incrementum Ad {{Absurdum}}: {{Global Growth}}, {{Inequality}} and {{Poverty Eradication}} in a {{Carbon-Constrained World}}},
+  shorttitle = {{$<$}em{$>$}{{Incrementum}} Ad {{Absurdum}}{$<$}/Em{$>$}},
+  author = {Woodward, David},
+  year = {2015},
+  month = feb,
+  journal = {World Social and Economic Review},
+  volume = {2015},
+  number = {No 4, 2015},
+  pages = {43},
+  issn = {2049-3517},
+  url = {http://wser.worldeconomicsassociation.org/papers/incrementum-ad-absurdum-global-growth-inequality-and-poverty-eradication-in-a-carbon-constrained-world/},
+  annotation = {00000}
+}
+
 @techreport{woodward_redefining_2010,
   title = {Redefining {{Poverty}}},
   author = {Woodward, David and Abdallah, Saamah},
   year = {2010},
   institution = {{new economics foundation}},
   url = {https://neweconomics.org/uploads/files/RBPLTechPub.pdf}
+}
+
+@misc{world_bank_world_2022,
+  title = {World {{Bank Group President David Malpass}}: {{Foreword}} to the {{Poverty}} and {{Shared Prosperity}} 2022 {{Report}}},
+  shorttitle = {World {{Bank Group President David Malpass}}},
+  author = {World Bank},
+  year = {2022},
+  journal = {World Bank},
+  url = {https://www.worldbank.org/en/news/statement/2022/10/05/world-bank-group-president-david-malpass-foreword-to-the-poverty-and-shared-prosperity-report}
 }
