--- a/tables/bolch_update.tex
+++ b/tables/bolch_update.tex
@@ -46,6 +46,8 @@ Peru & 2021 & 0.09 & 1.00 & 0.98\\
 Philippines & 2021 & 0.18 & 0.98 & 0.91\\
 Poland & 2019 & 0.00 & 1.00 & 1.00\\
 Poland & 2019 & 0.00 & 1.00 & 1.00\\
+Poland & 2019 & 0.00 & 1.00 & 1.00\\
+Poland & 2019 & 0.00 & 1.00 & 1.00\\
 Russia & 2020 & 0.00 & 1.00 & 1.00\\
 Sudan & 2014 & 0.66 & 0.48 & 0.04\\
 Syria & 2003 & 0.10 & 0.99 & 0.97\\
