--- a/tables/bolch_replication.tex
+++ b/tables/bolch_replication.tex
@@ -4,52 +4,54 @@
 \toprule
   & \makecell{Survey\\year} & \makecell{Poverty rate\\at $\$_{05PPP}$2}/day\\replicated & \makecell{Poverty rate\\at $\$_{05PPP}$2}/day\\original & \makecell{Poverty Eradication Capacity\\Scenario 1 (tax above \$2/day)\\replicated} & \makecell{Poverty Eradication Capacity\\Scenario 1 (tax above \$2/day)\\original} & \makecell{Poverty Eradication Capacity\\Scenario 1 (tax above \$18/day)\\replicated} & \makecell{Poverty Eradication Capacity\\Scenario 1 (tax above \$18/day)\\original}\\
 \midrule
-Angola & NA & NA & 0.67 & 0.79 & 0.47 & 0.28 & 0.01\\
-Argentina & NA & NA & 0.02 & 1.00 & 1.00 & 1.00 & 1.00\\
-Burkina Faso & NA & NA & 0.73 & 0.86 & 0.38 & 0.30 & 0.04\\
-Bangladesh & NA & NA & 0.77 & 0.97 & 0.25 & 0.64 & 0.00\\
-Brazil & NA & NA & 0.11 & 1.00 & 0.99 & 0.99 & 0.99\\
-Ivory Coast & NA & NA & 0.46 & 0.96 & 0.85 & 0.51 & 0.10\\
-Cameroon & NA & NA & 0.30 & 0.91 & 0.96 & 0.42 & 0.39\\
-Democratic Republic of the Congo & NA & NA & 0.95 & 0.19 & 0.02 & 0.00 & 0.00\\
-Colombia & NA & NA & 0.16 & 0.99 & 0.99 & 0.98 & 0.98\\
-Algeria & NA & NA & 0.24 & 1.00 & 0.97 & 0.99 & 0.24\\
-Egypt & NA & NA & 0.15 & 0.99 & 0.98 & 0.93 & 0.69\\
-Ethiopia & NA & NA & 0.66 & 0.90 & 0.49 & 0.20 & 0.04\\
-Ghana & NA & NA & 0.52 & 0.92 & 0.80 & 0.35 & 0.09\\
-Iran & NA & NA & 0.08 & 1.00 & 1.00 & 1.00 & 0.97\\
-Iraq & NA & NA & 0.21 & 1.00 & 0.97 & 0.99 & 0.24\\
-Kenya & NA & NA & 0.67 & 0.86 & 0.57 & 0.18 & 0.07\\
-Sri Lanka & NA & NA & 0.24 & 0.99 & 0.97 & 0.94 & 0.73\\
-Morocco & NA & NA & 0.14 & 1.00 & 0.99 & 0.99 & 0.94\\
-Madagascar & NA & NA & 0.93 & 0.05 & 0.05 & 0.00 & 0.00\\
-Mexico & NA & NA & 0.06 & 1.00 & 1.00 & 0.99 & 0.99\\
-Mali & NA & NA & 0.79 & 0.87 & 0.16 & 0.09 & 0.00\\
-Mozambique & NA & NA & 0.82 & 0.33 & 0.16 & 0.11 & 0.00\\
-Malawi & NA & NA & 0.82 & 0.08 & 0.19 & 0.00 & 0.02\\
-Malaysia & NA & NA & 0.02 & 1.00 & 1.00 & 1.00 & 1.00\\
-Niger & NA & NA & 0.75 & 0.32 & 0.28 & 0.03 & 0.01\\
-Nigeria & NA & NA & 0.78 & 0.57 & 0.19 & 0.00 & 0.00\\
+Angola & 2008 & 0.35 & 0.67 & 0.79 & 0.47 & 0.28 & 0.01\\
+Argentina & 2010 & 0.03 & 0.02 & 1.00 & 1.00 & 1.00 & 1.00\\
+Burkina Faso & 2009 & 0.77 & 0.73 & 0.86 & 0.38 & 0.30 & 0.04\\
+Bangladesh & 2010 & 0.54 & 0.77 & 0.97 & 0.25 & 0.64 & 0.00\\
+Brazil & 2009 & 0.13 & 0.11 & 1.00 & 0.99 & 0.99 & 0.99\\
+Ivory Coast & 2008 & 0.60 & 0.46 & 0.96 & 0.85 & 0.51 & 0.10\\
+Cameroon & 2007 & 0.56 & 0.30 & 0.91 & 0.96 & 0.42 & 0.39\\
+Democratic Republic of the Congo & 2004 & 0.97 & 0.95 & 0.19 & 0.02 & 0.00 & 0.00\\
+Colombia & 2010 & 0.18 & 0.16 & 0.99 & 0.99 & 0.98 & 0.98\\
+Algeria & 1995 & 0.22 & 0.24 & 1.00 & 0.97 & 0.99 & 0.24\\
+Egypt & 2008 & 0.21 & 0.15 & 0.99 & 0.98 & 0.93 & 0.69\\
+Ethiopia & 2010 & 0.68 & 0.66 & 0.90 & 0.49 & 0.20 & 0.04\\
+Ghana & 2005 & 0.67 & 0.52 & 0.92 & 0.80 & 0.35 & 0.09\\
+Iran & 2005 & 0.05 & 0.08 & 1.00 & 1.00 & 1.00 & 0.97\\
+Iraq & 2006 & 0.02 & 0.21 & 1.00 & 0.97 & 0.99 & 0.24\\
+Kenya & 2005 & 0.61 & 0.67 & 0.86 & 0.57 & 0.18 & 0.07\\
+Sri Lanka & 2009 & 0.20 & 0.24 & 0.99 & 0.97 & 0.94 & 0.73\\
+Morocco & 2006 & 0.18 & 0.14 & 1.00 & 0.99 & 0.99 & 0.94\\
+Madagascar & 2010 & 0.91 & 0.93 & 0.05 & 0.05 & 0.00 & 0.00\\
+Mexico & 2010 & 0.11 & 0.06 & 1.00 & 1.00 & 0.99 & 0.99\\
+Mali & 2009 & 0.76 & 0.79 & 0.87 & 0.16 & 0.09 & 0.00\\
+Mozambique & 2008 & 0.88 & 0.82 & 0.33 & 0.16 & 0.11 & 0.00\\
+Malawi & 2010 & 0.86 & 0.82 & 0.08 & 0.19 & 0.00 & 0.02\\
+Malaysia & 2008 & 0.04 & 0.02 & 1.00 & 1.00 & 1.00 & 1.00\\
+Niger & 2007 & 0.92 & 0.75 & 0.32 & 0.28 & 0.03 & 0.01\\
+Nigeria & 2010 & 0.63 & 0.78 & 0.57 & 0.19 & 0.00 & 0.00\\
 Nepal & 2010 & 0.36 & 0.57 & 0.99 & 0.69 & 0.90 & 0.00\\
-Pakistan & NA & NA & 0.60 & 0.95 & 0.66 & 0.35 & 0.03\\
-Peru & NA & NA & 0.13 & 1.00 & 0.99 & 0.98 & 0.98\\
-Philippines & NA & NA & 0.42 & 0.98 & 0.92 & 0.91 & 0.27\\
-Poland & NA & NA & 0.00 & 1.00 & 1.00 & 1.00 & 1.00\\
-Poland & NA & NA & 0.00 & 1.00 & 1.00 & 1.00 & 1.00\\
-Russia & NA & NA & 0.00 & 1.00 & 1.00 & 1.00 & 1.00\\
-Sudan & NA & NA & 0.44 & 0.48 & 0.84 & 0.04 & 0.00\\
-Syria & NA & NA & 0.17 & 0.99 & 0.99 & 0.97 & 0.84\\
-Thailand & NA & NA & 0.04 & 1.00 & 1.00 & 1.00 & 0.99\\
-Turkey & NA & NA & 0.05 & 1.00 & 1.00 & 1.00 & 0.99\\
-Tanzania & NA & NA & 0.88 & 0.50 & 0.08 & 0.06 & 0.00\\
-Uganda & NA & NA & 0.65 & 0.55 & 0.59 & 0.10 & 0.04\\
-Ukraine & NA & NA & 0.00 & 1.00 & 1.00 & 1.00 & 1.00\\
+Pakistan & 2007 & 0.55 & 0.60 & 0.95 & 0.66 & 0.35 & 0.03\\
+Peru & 2010 & 0.16 & 0.13 & 1.00 & 0.99 & 0.98 & 0.98\\
+Philippines & 2009 & 0.34 & 0.42 & 0.98 & 0.92 & 0.91 & 0.27\\
+Poland & 2011 & 0.01 & 0.00 & 1.00 & 1.00 & 1.00 & 1.00\\
+Poland & 2011 & 0.01 & 0.00 & 1.00 & 1.00 & 1.00 & 1.00\\
+Poland & 2011 & 0.01 & 0.00 & 1.00 & 1.00 & 1.00 & 1.00\\
+Poland & 2011 & 0.01 & 0.00 & 1.00 & 1.00 & 1.00 & 1.00\\
+Russia & 2009 & 0.01 & 0.00 & 1.00 & 1.00 & 1.00 & 1.00\\
+Sudan & 2009 & 0.44 & 0.44 & 0.48 & 0.84 & 0.04 & 0.00\\
+Syria & 2003 & 0.10 & 0.17 & 0.99 & 0.99 & 0.97 & 0.84\\
+Thailand & 2010 & 0.03 & 0.04 & 1.00 & 1.00 & 1.00 & 0.99\\
+Turkey & 2010 & 0.04 & 0.05 & 1.00 & 1.00 & 1.00 & 0.99\\
+Tanzania & 2007 & 0.80 & 0.88 & 0.50 & 0.08 & 0.06 & 0.00\\
+Uganda & 2009 & 0.72 & 0.65 & 0.55 & 0.59 & 0.10 & 0.04\\
+Ukraine & 2010 & 0.00 & 0.00 & 1.00 & 1.00 & 1.00 & 1.00\\
 Venezuela & 2006 & 0.14 & 0.13 & 0.99 & 0.99 & 0.95 & 0.95\\
-Vietnam & NA & NA & 0.43 & 1.00 & 0.87 & 1.00 & 0.06\\
-Yemen & NA & NA & 0.47 & 0.83 & 0.85 & 0.11 & 0.13\\
-South Africa & NA & NA & 0.31 & 0.97 & 0.98 & 0.94 & 0.97\\
-Zambia & NA & NA & 0.87 & 0.35 & 0.13 & 0.06 & 0.01\\
-China & NA & NA & 0.27 & 1.00 & 0.97 & 1.00 & 0.78\\
-India & NA & NA & 0.69 & 0.94 & 0.48 & 0.54 & 0.04\\
+Vietnam & 2008 & 0.36 & 0.43 & 1.00 & 0.87 & 1.00 & 0.06\\
+Yemen & 2005 & 0.37 & 0.47 & 0.83 & 0.85 & 0.11 & 0.13\\
+South Africa & 2008 & 0.37 & 0.31 & 0.97 & 0.98 & 0.94 & 0.97\\
+Zambia & 2010 & 0.81 & 0.87 & 0.35 & 0.13 & 0.06 & 0.01\\
+China & 2008 & 0.08 & 0.27 & 1.00 & 0.97 & 1.00 & 0.78\\
+India & 2009 & 0.20 & 0.69 & 0.94 & 0.48 & 0.54 & 0.04\\
 \bottomrule
 \end{longtable}
