--- a/tables/poverty.tex
+++ b/tables/poverty.tex
@@ -1,6 +1,6 @@
 \begin{table}[h]
 
-\caption{\label{tab:poverty}Global poverty rates and poverty gaps in 2030 under different growth scenarios. Poverty rates are expressed in \% of world population and poverty gaps in \% of world GDP. Poverty lines are in PPP \$/day.}
+\caption[Global poverty (rates and gaps) in 2030 under different growth scenarios.]{\label{tab:poverty}Global poverty rates and poverty gaps in 2030 under different growth scenarios. Poverty rates are expressed in \% of world population and poverty gaps in \% of world GDP. Poverty lines are in PPP \$/day.}
 \centering
 \begin{tabular}[t]{lrrrrrrrr}
 \toprule Growth scenario & \multicolumn{4}{c}{Poverty rate (\%)} & \multicolumn{4}{c}{Poverty gap (\% of GDP)} \\ 
