--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -509,9 +509,10 @@ should be addressed to Adrien Fabre~(email: adrien.fabre@cnrs.fr).\end{itemize}
 % \end{addendum}
 
 \appendix
-% \section{Additional figures}
+\section{Appendix}
+% \subsection{Additional figures}
 
-\section{Additional tables}
+\subsection{Additional tables}
 \input{../tables/cap.tex}
 \input{../tables/tax.tex}
 \input{../tables/floor.tex}
