--- a/tables/floor.tex
+++ b/tables/floor.tex
@@ -1,6 +1,6 @@
 \begin{table}[b]
 
-\caption{\label{tab:tax}Income floor (in \$/day) financed by a 10\% tax above \$10/day for major lower-income countries in 2030.}
+\caption[Income floor (in \$/day) financed by a 10\% tax above \$10/day.]{\label{tab:tax}Income floor (in \$/day) financed by a 10\% tax above \$10/day for major lower-income countries in 2030.}
 \centering
 \begin{tabular}[t]{lrrrrr}
 \toprule Growth scenario over 2022--2030 & 3\% & 3\% & 7\% & 7\% & \makecell{7\% since \\ 2015} \\ National accounts adjustment & & \checkmark & & \checkmark & \\  \midrule
