--- a/tables/gain.tex
+++ b/tables/gain.tex
@@ -1,6 +1,6 @@
 \begin{table}[b]
 
-\caption{\label{tab:tax}Net gain per country of a global antipoverty tax on income above \$100,000/year, for most populous countries in 2030 after 3\% growth.}
+\caption[Net gain per country of a global antipoverty tax above \$100,000/year]{\label{tab:tax}Net gain per country of a global antipoverty tax on income above \$100,000/year, for most populous countries in 2030 after 3\% growth.}
 \centering
 \begin{tabular}[t]{lrrrr}
 \toprule Tax rate & 0.5\% & 15\% & 0.5\% & 15\%  \\ National accounts adjustment &  & \checkmark & & \checkmark \\  \midrule
