top rows tables

--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -322,9 +322,9 @@ Unless otherwise stated, I use the scenario of balanced growth at a rate of 3\%.
 \subsection{Antipoverty caps}
 
 % TODO! table cap by country for different scenarios (incl. 2.15$ 3%, 7%, with and without HFCE, 3% BCS; $3.44 Bolch, 3%)
-% TODO! table tax: $2.15 above $6.85 g 3%; $2.15 ab $18.15 g 7%; $2.15 ab $18.15 g 3%; $2.15 ab $18.15 g trend; ($2.15 ab $6.85 g 7%; $2.15 above $6.85 g 3% HFCE; $2.15 ab $18.15 g 7% HFCE)
-% TODO! table floor: 10% ab $6.85 g 3%; g 3% with HFCE; g 7%; g 7% since 2016
-% TODO! net gain per country 1.2% / 15% tax ab $100/day w & wo HFCE + global revenue raised (% of global GDP) + global floor + global transfer + global Gini
+% table tax: $2.15 above $6.85 g 3%; $2.15 ab $18.15 g 7%; $2.15 ab $18.15 g 3%; $2.15 ab $18.15 g trend; ($2.15 ab $6.85 g 7%; $2.15 above $6.85 g 3% HFCE; $2.15 ab $18.15 g 7% HFCE)
+%  table floor: 10% ab $6.85 g 3%; g 3% with HFCE; g 7%; g 7% since 2016
+%  net gain per country 1.2% / 15% tax ab $100/day w & wo HFCE + global revenue raised (% of global GDP) + global floor + global transfer + global Gini
 % Include mean SSA + LIC in Table + result at global level (w)
 % $3.65 p / 'reg' growth
 I estimate the income cap that each country should impose to fill the extreme poverty gap with the exproriated income (Figure \ref{fig:antipoverty_cap}). 
@@ -508,7 +508,6 @@ All data and code of as well as figures of the paper are available on \href{http
 should be addressed to Adrien Fabre~(email: adrien.fabre@cnrs.fr).\end{itemize}
 % \end{addendum}
 
-\appendix
 \section{Appendix}
 % \subsection{Additional figures}
 
